fixed blurry download phone, further implemented doctor reviews, recreated individual doctor page

--- a/src/components/doctor-own-profile/doctor-own-voucher-card.styles.scss
+++ b/src/components/doctor-own-profile/doctor-own-voucher-card.styles.scss
@@ -8,7 +8,7 @@
     flex-shrink: 0;
     border-radius: 4.899px;
     background: var(--White, #FBFCFF);
-    box-shadow: 0px 7.34837px 9.79783px 0px rgba(226, 227, 231, 0.25), 0px 0px 24.49457px 0px rgba(255, 164, 163, 0.10);
+    box-shadow: 0px 2px 8px lightgray;
     .voucher-card-avartar
     {
         padding-left: 20px;
